removed sendgrid, adjusted logo size

--- a/website/templates/emailtemplates/getinvited.html
+++ b/website/templates/emailtemplates/getinvited.html
@@ -1,4 +1,4 @@
-  <!doctype html>
+<!doctype html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -333,7 +333,7 @@
     </style>
   </head>
   <body>
-    <span class="preheader">Welcome to Frankly, sign in!</span>
+    <span class="preheader">Welcome to the Frankly waiting list</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -342,30 +342,22 @@
 
             <!-- START CENTERED WHITE CONTAINER -->
             <table role="presentation" class="main">
-                <h1>Hi there, Welcome to Frankly!</h1>
+                <h1>Welcome to the Frankly waiting list!</h1>
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
+                      <thead>
+                        <tr>
+                          <th style="text-align:left;"><img src="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" width="250"  alt="Frankly"></th>
+                       </tr>
+                      </thead>
                       <td>
-                        <p>Hi there, Welcome to Frankly!</p>
-                        <p>Your account was created succesfully hit the button to sign in!</p>
-                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
-                          <tbody>
-                            <tr>
-                              <td align="left">
-                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                                  <tbody>
-                                    <tr>
-                                      <td> <a href="https://franklyapp.nl/sign-in" target="_blank">Sign into your account</a> </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
+                        <p>We registered you to our waiting list, on this email address:</p>
+                        <p>{{email}}</p>
+                        <p>Keep an eye on your mailbox as we'll be sending out invites real soon!</p>
+                        
                         <p>Have a great day</p>
                         <p>Cheers, the Frankly Team</p>
                       </td>
