--- a/website/templates/legal/theme.html
+++ b/website/templates/legal/theme.html
@@ -26,7 +26,7 @@
 
         <title>{% block title %}{% endblock %}</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/img/favicon.png') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/img/Favicon.png') }}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
          <!-- Charting library import-->
