--- a/website/templates/newstyle.html
+++ b/website/templates/newstyle.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Frankly</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/Logo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -18,7 +18,7 @@
 
 
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/img/favicon.png') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/img/Favicon.png') }}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
             <!-- Charting library import-->
