--- a/website/templates/newstyle.html
+++ b/website/templates/newstyle.html
@@ -71,7 +71,7 @@
                     </ul>
                     <button class="btn bg-secondary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
-                            <i class="bi-chat-text-fill me-2"></i>
+                            <i class="bi-chat-dots-text-fill me-2"></i>
                             <span class="small">Send Feedback</span>
                         </span>
                     </button>
