--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -101,7 +101,7 @@
           <p>Start asking your clients for feedback, by forwarding them one of our templates. We'll send you a ready-to-send copy that you can forward easily. </p>
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
             <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasEmail" aria-controls="offcanvasEmail"><i class="bi bi-envelope-check"></i> Email</button>
-            <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWhatsapp" aria-controls="offcanvasWhatsapp"> <i class="bi bi-whatsapp"></i> Whatsapp</button>
+            <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSMS" aria-controls="offcanvasSMS"> <i class="bi bi-chat-dots"></i> SMS</button>
             <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasQR" aria-controls="offcanvasQR"><i class="bi bi-qr-code"></i> QR Codes</button>
           
           </div>
@@ -428,16 +428,16 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-          Step 2: Share your surveys online, through Whatsapp or Email
+          Step 2: Share your surveys online, through SMS or Email
         </button>
       </h2>
       <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
         <div class="accordion-body">
-          <p>Frankly allows you to easily connect with your customers. We provide text templates that you can share with your customers. You can send yourself a template on Whatsapp or through email.</p>
+          <p>Frankly allows you to easily connect with your customers. We provide text templates that you can share with your customers. You can send yourself a template on SMS or through email.</p>
           <p>After receiving the template you can easily forward it to a customer you'd like to get some feedback from!</p>
 
             <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasEmail" aria-controls="offcanvasEmail"><i class="bi bi-envelope-check"></i> Email</button>
-            <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWhatsapp" aria-controls="offcanvasWhatsapp"><i class="bi bi-whatsapp"></i> Whatsapp</button>
+            <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSMS" aria-controls="offcanvasSMS"><i class="bi bi-chat-dots"></i> SMS</button>
         </div>
       </div>
     </div>
@@ -488,19 +488,19 @@
 
 </div>
 
-<!-- These 2 offcanvas items manage the sliding in of information when users tap the whatsapp and Email buttons-->
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasWhatsapp" aria-labelledby="offcanvasWhatsapp">
+<!-- These 2 offcanvas items manage the sliding in of information when users tap the SMS and Email buttons-->
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasSMS" aria-labelledby="offcanvasSMS">
   
   <div class="offcanvas-header">
-    <h3 id="offcanvasWhatsapp">How to get feedback through Whatsapp</h3>
+    <h3 id="offcanvasSMS">How to get feedback through SMS</h3>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <p><i>You can simply receive feedback through whatsapp using our pre-made whatsapp template it works super simple:</i></p>
+    <p><i>You can simply receive feedback through SMS using our pre-made SMS template it works super simple:</i></p>
     <hr>
     <h5>Step 1: Send the template to your phone</h5>
     <p>Frankly will send you template on your phone, all you have to do is tap this button:</p>
-    <a href="/sendwhatsapp/{{user.id}}/{{user.phonenumber}}" class="btn btn-primary text-dark" tabindex="-1" role="button"><i class="bi bi-send-check"></i> Send the Whatsapp template to my phone</a>
+    <a href="/sendwhatsapp/{{user.id}}/{{user.phonenumber}}" class="btn btn-primary text-dark" tabindex="-1" role="button"><i class="bi bi-send-check"></i> Send the SMS template to my phone</a>
     <br>    <br>    <br>
     <img class="app-badge center-block" src="{{ url_for('static',filename='assets/img/chat.png') }}" alt="..." style="max-width: 50%"/>
     <br>
@@ -509,7 +509,7 @@
 
     <br>
     <h5>Step 2: Share the template with contacts in your phone </h5>
-    <li>Simply hold your finger on the message in Whatsapp, and a menu will pop up. </li>
+    <li>Simply hold your finger on the message in SMS, and a menu will pop up. </li>
    <li>Tap "forward" and select the contacts you want to ask for feedback</li>>
     <img class="app-badge center-block" src="{{ url_for('static',filename='assets/img/sharing.jpeg') }}" alt="..." style="max-width: 50%"/>
     <br>
@@ -529,7 +529,7 @@
 </div>
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasEmail" aria-labelledby="offcanvasEmail">
   <div class="offcanvas-header">
-    <h3 id="offcanvasWhatsapp">How to get feedback through Email</h3>
+    <h3 id="offcanvasSMS">How to get feedback through Email</h3>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
@@ -570,7 +570,7 @@
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasQR" aria-labelledby="offcanvasQR">
   <div class="offcanvas-header">
-    <h3 id="offcanvasWhatsapp">How to get feedback through QRcode</h3>
+    <h3 id="offcanvasSMS">How to get feedback through QRcode</h3>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
@@ -757,7 +757,7 @@
                       placeholder="{{user.customquestion0}}" 
                       aria-describedby="emailHelp"/>
                       
-                      <div id="emailHelp" class="form-text">This question is used in the whatsapp and email template to invoke a response from your customer </div>
+                      <div id="emailHelp" class="form-text">This question is used in the SMS and email template to invoke a response from your customer </div>
                     </div>
                     <h6>Follow up questions:</h6>
                     <div class="mb-3">
