--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -34,7 +34,7 @@
               </div>
               <br />
               <div align="center">
-                <button class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-primary text-dark" type="submit">Login</button>
               </div>
             </div>
             
