--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -77,7 +77,7 @@
                 <div class="col-md-12">
                   <input class="form-check-input" type="checkbox"type="radio" name="option" id="option" value="accepted"> I accept the <a class="text-third" href="/legal/terms">terms and conditions</a> of Frankly </input<br>
                   <div align="center">
-                    <button class="btn btn-primary" type="submit">Sign Up</button>
+                    <button class="btn btn-primary text-dark" type="submit">Sign Up</button>
                   </div>
                   </div>
                 </div>
