fixed requirements file.  Calculation to signin

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -164,6 +164,7 @@
   <div class="col-sm-4">
 <!--Commonly used words-->
 <h4>Words your users use:</h4>
+<p>Here are the top 10 most frequently used words in your responses</p>
     <canvas id="lineChartWords" width="300" height="200"></canvas>
   <script>
     var ctx = document.getElementById("lineChartWords").getContext("2d");
