Fixed logo's on prod

--- a/website/templates/newstyle.html
+++ b/website/templates/newstyle.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Frankly</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/Logo.png" />
+        <link rel="icon" type="image/x-icon" href="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
