--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -25,7 +25,7 @@
  
  
  
-         <title>{% block title %}{% endblock %}</title>
+         <title>Frankly App - Get Feedback Now</title>
          <!-- Favicon-->
          <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/img/Favicon.png') }}" />
          <!-- Font Awesome icons (free version)-->
