--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -77,10 +77,10 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase text-dark fixed-top" id="mainNav">
             <div class="container">
                 {% if user.is_authenticated %}
-                <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/Favicon.png') }}" width="75"  alt="Frankly"></a>
+                <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" width="75"  alt="Frankly"></a>
                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><!--Frankly--></a><span class="badge rounded-pill bg-third">beta</span>
                 {% else %}
-                <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/logo.png') }}" width="75" alt="Frankly"></a>
+                <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" width="75" alt="Frankly"></a>
                 <a class="navbar-brand text-dark" href="/"><!--Frankly--></a><span class="badge rounded-pill bg-light text-dark">Beta</span>
                 {% endif%}
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
