adding logs to AWS deployment scripts

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -118,6 +118,20 @@
   <div class="row">
   <div class="col-12">
 
+
+
+
+<!--HERE WE Start THE CAROUSEL -->
+
+
+<!--HERE WE END THE CAROUSEL -->
+
+
+
+
+
+
+
     <!--Drawing the bar chart-->
     {% if totalresponses  > 0 %}
 
