fixed password reset template

--- a/website/templates/emailtemplates/welcome.html
+++ b/website/templates/emailtemplates/welcome.html
@@ -372,7 +372,7 @@
                           </tbody>
                         </table>
                         <p>Have a great day</p>
-                        <p>Cheers, the Frankly Team</p>
+                        <p>Thanks, the Frankly Team</p>
                       </td>
                     </tr>
                   </table>
