--- a/website/templates/emailtemplates/passwordresetconfirm.html
+++ b/website/templates/emailtemplates/passwordresetconfirm.html
@@ -1,9 +1,9 @@
-<!doctype html>
+  <!doctype html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{{question}}</title>
+    <title>Your Frankly password was reset succesfully!</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -333,7 +333,7 @@
     </style>
   </head>
   <body>
-    <span class="preheader">{{question}}</span>
+    <span class="preheader">Your Frankly password was reset succesfully!</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -342,15 +342,20 @@
 
             <!-- START CENTERED WHITE CONTAINER -->
             <table role="presentation" class="main">
-                <h1>{{question}}</h1>
+                <h1>Hi there, your password was reset!</h1>
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
+                      <thead>
+                        <tr>
+                          <th style="text-align:left;"><img src="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" width="250"  alt="Frankly"></th>
+                       </tr>
+                      </thead>
                       <td>
-                        <p>Tap the button that best suits your experience with {{userpublicname}}</p>
-
+                        <p>Hi there, </p>
+                        <p>Your password was reset succesfully. Hit the button to sign in!</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
                             <tr>
@@ -358,7 +363,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="{{promotorURL}}" target="_blank">😃 great!</a> </td>
+                                      <td> <a href="https://franklyapp.nl/sign-in" target="_blank">Sign into your account</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -366,41 +371,8 @@
                             </tr>
                           </tbody>
                         </table>
-
-                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
-                          <tbody>
-                            <tr>
-                              <td align="left">
-                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                                  <tbody>
-                                    <tr>
-                                      <td> <a href="{{neutralURL}}" target="_blank">😑 mehh!</a> </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-
-                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
-                          <tbody>
-                            <tr>
-                              <td align="left">
-                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                                  <tbody>
-                                    <tr>
-                                      <td> <a href="{{detractorURL}}" target="_blank">😢 Not so good</a> </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-
                         <p>Have a great day</p>
-                        <p>Thanks, {{userpublicname}}</p>
+                        <p>Thanks, the Frankly Team</p>
                       </td>
                     </tr>
                   </table>
@@ -417,7 +389,7 @@
                 <tr>
                   <td class="content-block">
                     <span class="apple-link">Frankly - hello@franklyapp.nl</span>
-                    <br> Collect feedback from your users <a href="https://franklyapp.nl">try Frankly</a>.
+                    <!--<br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.-->
                   </td>
                 </tr>
                 <tr>
